Fix SonarQube MEDIUM+ issues: Math.clamp, restricted identifier, JPA no-arg ctors, test lambda
- java:S6885 (ExpoPushNotificationProvider): use Math.clamp instead of
  nested Math.max(Math.min(...)) for batch-size clamping.
- java:S6213 (NotificationRecorder): rename record() to recordEvent() —
  "record" is a restricted identifier since Java 16 (records).
- java:S1186 (7 JPA entities): document the required no-arg JPA
  constructors with an explanatory comment instead of leaving them bare.
- java:S5778 (DispatchNotificationServiceTest): hoist the device() call
  out of the assertThatThrownBy lambda so only the call under test can
  throw.

Skipped (not fixed), with reasons:
- java:S4502 (SecurityConfig CSRF disabled): this is a stateless
  JWT-bearer OAuth2 resource server (SessionCreationPolicy.STATELESS,
  no cookie session auth), so disabling CSRF is standard/correct and
  re-enabling it would break the API. False positive.
- java:S107 x8 (Notification/NotificationDelivery/NotificationDevice
  constructors and factory methods): fixing requires introducing
  parameter objects/builders, a broad refactor rippling through
  create/reconstitute/refresh call sites, persistence mapping and
  tests — beyond a minimal targeted fix and inconsistent with this
  codebase's convention of plain aggregate constructors (mirrors
  skateboard-podcast-be's identically-shaped, identically-flagged
  Post/Category aggregates).
- plsql:VarcharUsageCheck x17 (V1__notification.sql): excluded per
  instructions — Sonar misclassifies this Postgres Flyway migration as
  Oracle PL/SQL; VARCHAR2 is invalid Postgres syntax.

Verified: mvn -o compile and mvn -o test both pass (100 tests, 0
failures/errors) excluding PodcastPublishedIntegrationTest, which
fails identically on a clean checkout of main with Docker/Testcontainers
RabbitMQ (pre-existing, unrelated to these changes — confirmed via
git stash + rerun).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://cl